--- a/wp-content/themes/voiceofoc/less/mobile.less
+++ b/wp-content/themes/voiceofoc/less/mobile.less
@@ -56,22 +56,18 @@
   @media ( min-width: 768px ) {
     .span12:nth-child(n) {
       margin-left: 0;
-      width: 100%;
       clear: both;
     }
     .span6:nth-child(2n+1) {
       margin-left: 0;
-      width: 100%;
       clear: left;
     }
     .span4:nth-child(3n+1) {
       margin-left: 0;
-      width: 100%;
       clear: left;
     }
     .span3:nth-child(4n+1) {
       margin-left: 0;
-      width: 100%;
       clear: left;
     }
   }
